Fixed spacing to likes page

--- a/src/components/likes.css
+++ b/src/components/likes.css
@@ -1,6 +1,6 @@
 .card {
   position: absolute;
-  top: 150px;
+  top: 80px;
   width: 100%;
   /* height: 75vh; */
 }
@@ -19,8 +19,8 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  margin: 0.5rem;
-  height: 70vh;
+  /* margin: 0.5rem; */
+  height: 90vh;
 }
 
 .command-swipe {
